Tue Sep 26 10:12:18 CEST 2000  Robin Ericsson  <robin@noname4us.com>

	* README: included OpenBSD in list of successful builds.

Thu Sep 11 02:44:29 CEST 2000 Jordi Mallach <jordi@debian.org>
	* po/es.po: updated strings.

Thu Sep  7 01:11:58 CEST 2000 Jordi Mallach <jordi@debian.org>
	* plugins/test.plugin/Makefile: stupid fix in libgtk and libglib
	  calls so the test plugin can compile again. Jorge spotted this,
	  really.

Thu Aug 31 23:34:30 CEST 2000 Jorge Garcia <jorge.garcia@uv.es>

	* Added Vars. (generic 'data' functions to work with alias, actions 
                       and vars):
	  + src/data.c: created (absorving code of alias.c and action.c)
		- src/Makefile.am (+data.c -alias.c -action.c)
		- src/amcl.h: deleted all alias and action structs
		- src/init.c: some modifications (alias and action -> data)
	  + src/amcl.c: moved load_alias and load_actions to init.c (load_data)
	  + src/net.c: [action_send_to_connection] more 'gtktized' and
                       needed modifications to allow vars.c     
	* src/init.c:
	  + converted some global variables to local
	  + removed all gtk_widget_show(...) and added gtk_widget_show_all(...)
	* src/amcl.h: added <stdio.h> to allow compilation of plugins

Fri Aug 11 18:32:14 2000  Jordi Mallach  <jordi@debian.org>
	* src/color.c, src/window.c: fix button labels that remained
	  unchanged, woops (updated *.po's manually, sorry for
	  inconveniences).
	* BUGS: add the gdk errors in color.c to the buglist.

Wed Aug  9 13:40:31 2000  Robin Ericsson  <robin@noname4us.com>

	* configure.in, po/de.po: Added german translation.

Wed Aug  2 15:59:36 2000  Robin Ericsson  <robin@noname4us.com>

	* Initial sv.po, most of the things is translated.

Tue Jul 25 16:04 2000  Jordi Mallach  <jordi@debian.org>
	* Cosmetic fixes: unify button labels, MUD and AMCL nomeclature.
	* Reformat or delete redundant comments in the sources. We've had an
	  AUTHORS file for a while.
	* Improvements in help strings, etc.
