@@ -7,7 +7,7 @@ AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
-ALL_LINGUAS="es sv de"
+ALL_LINGUAS="es sv de ca"
 
 AC_INIT(src/amcl.c)
 
